--- a/index.html
+++ b/index.html
@@ -52,27 +52,26 @@
         </div>
         <div class="services_container">
             <div class="service">
-                <h3>Standard</h3>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <h3>Premium</h3>
+                <h4>Minimum £10,000. Can be negotiated</h4>
+                Coming soon!
             </div>
             <div class="service">
                 <h3>Standard</h3>
+                <h4>£1200 or 100 per month</h4>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>5 pages</li>
+                    <li>Unlimited revisions</li>
+                    <li>Lifetime updates</li>
                 </ul>
             </div>
             <div class="service">
                 <h3>Hosting</h3>
+                <h4>£0</h4>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Included in both packages</li>
+                    <li>Done for a lifetime unless you cancel</li>
+                    <li>Lifetime updates</li>
                 </ul>
             </div>
         </div>
