Add links, header and footer to all pages

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header class="header">
         <div class="logo"></div>
         <ul class="menu">
-            <li><a href="">About</a></li>
+            <li><a href="pages/about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact us</a></li>
+            <li><a href="pages/services.html">Services</a></li>
+            <li><a href="pages/contact.html">Contact us</a></li>
         </ul>
     </header>
     <section>
@@ -81,10 +81,10 @@
         <div class="icons">
         </div>
         <ul class="menu">
-            <li><a href="">About</a></li>
+            <li><a href="pages/about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact us</a></li>
+            <li><a href="pages/services.html">Services</a></li>
+            <li><a href="pages/contact.html">Contact us</a></li>
         </ul>
         <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved.</div>
     </footer>
