Fill about page, update home page

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -15,6 +16,59 @@
             <li><a href="contact.html">Contact us</a></li>
         </ul>
     </header>
+    <section>
+        <h1>About</h1>
+        <h2>Who we are</h2>
+        <p>Simple! We are a small web development company that makes websites. A simple browse through the web 
+            shows the importanceof having a solid website for a company. But sadly, there seems to be an
+            increasing trend of small businesses that lack a website or a website made poorly with quick templates 
+            online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
+            customers.</br>
+            That's why we offer affordable yet functional websites, both for business owners and individuals. Even
+            if you don't want a website and are looking for advice in this industry or anything really, just give
+            us a shout <a href="contact.html">here</a>.
+        </p>
+        <h2>Services</h2>
+        <div class="services_container">
+            <div class="service">
+                <h3>Premium</h3>
+                <h4>Minimum £10,000. Can be negotiated</h4>
+                Coming soon!
+                <button>Learn more</button>
+                <button>Contact us</button>
+            </div>
+            <div class="service">
+                <h3>Standard</h3>
+                <h4>Pay a deposit of £300 first</h4>
+                <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
+                <ul>
+                    <li>5 pages</li>
+                    <li>Unlimited revisions</li>
+                    <li>Lifetime updates</li>
+                    <button>Learn more</button>
+                    <button>Contact us</button>
+                </ul>
+            </div>
+            <div class="service">
+                <h3>Hosting + </h3>
+                <h4>£40 per month</h4>
+                <ul>
+                    <li>Included in both packages if you would like</li>
+                    <li>Done for a lifetime unless you cancel</li>
+                    <li>Lifetime updates</li>
+                    <li>Unlimited edits</li>
+                    <button>Learn more</button>
+                    <button>Contact us</button>
+                </ul>
+            </div>
+        </div>
+        <h2>Portfolio</h2>
+        <div class="work_container">
+            <div class="design1">1</div>
+            <div class="design2">2</div>
+            <div class="design3">3</div>
+        </div>
+    </section>
     <footer class="footer">
         <div class="logo"></div>
         <div class="icons">
