--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -16,34 +17,32 @@
         </ul>
     </header>
     <section>
-        <div class="summary_container">
+        <div class="summary">
             <h1>I specialise in web development</h1>
-            <p>Need a website? I have you covered. With various payment plans customised just for you, I provide hand-coded websites. Don't worry about hosting it either,
-                I'll do it for free.
+            <p>Need a website? I have you covered: I offer hand-coded websites. Don't worry about hosting it either,
+                I'll do it for a minimal cost.
             </p>
         </div>
-        <div class="introduction_container"> 
-            <h1>Introduction</h1>
-            <p>No WordPress or page builders over here! These kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
+        <div class="introduction"> 
+            <h2>Introduction</h2>
+            <p>No WordPress or page builders over here! Those kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
                 Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site without it feeling flimsy or laggy. 
             </p>
-            <h2>Completely responsive</h2>
-            <p>This means your website will fit all sorts of screens from mobile phones to full desktop sizes, so no viewer is left behind.</p>
-            <h2>Convenient for you</h2>
+            <h3>Completely responsive</h3>
+            <p>This means your website will fit all sorts of screens from mobile phones to full desktop sizes, so no potential viewers are missing out.</p>
+            <h3>Convenient for you</h3>
             <p>I handle everything: building the website, hosting it and ensuring it is well protected.</p>
-            <h2>Cancel at any time</h2>
-            <p>If you change your mind before, during or after the process, you can do so with no extra fees. Refunds are given if the website has not been hosted yet.</p>
+            <h3>Cancel at any time</h3>
+            <p>If you change your mind before, during or after the process, you can do so with no extra fees.</p>
         </div>
-        <div class="payments_container">
-            <h1>Payment plans</h1>
-            <p>A standard website of 5 pages costs £1200. Each additional pages costs another £200. You initally pay a £200 deposit and then I get to work.<br />
-                <br />You can pay the rest up front or you can choose a payment plan. I offer £100 per month for 10 months but you <strong>can</strong> negotiate and customise
-                your own, provided it is reasonable (for example, paying £1 per month for 1000
-                months isn't reasonable).
+        <div class="payments">
+            <h2>Payment plans</h2>
+            <p>A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then I get to work.
+            You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
             </p>
         </div>
         <div class="portfolio">
-            <h1>Portfolio</h1>
+            <h2>Portfolio</h2>
             <div class="work_container">
                 <div class="design1">1</div>
                 <div class="design2">2</div>
@@ -55,23 +54,31 @@
                 <h3>Premium</h3>
                 <h4>Minimum £10,000. Can be negotiated</h4>
                 Coming soon!
+                <button>Learn more</button>
+                <button>Contact us</button>
             </div>
             <div class="service">
                 <h3>Standard</h3>
-                <h4>£1200 or 100 per month</h4>
+                <h4>Pay a deposit of £300 first</h4>
+                <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
                     <li>Lifetime updates</li>
+                    <button>Learn more</button>
+                    <button>Contact us</button>
                 </ul>
             </div>
             <div class="service">
-                <h3>Hosting</h3>
-                <h4>£0</h4>
+                <h3>Hosting + </h3>
+                <h4>£40 per month</h4>
                 <ul>
-                    <li>Included in both packages</li>
+                    <li>Included in both packages if you would like</li>
                     <li>Done for a lifetime unless you cancel</li>
                     <li>Lifetime updates</li>
+                    <li>Unlimited edits</li>
+                    <button>Learn more</button>
+                    <button>Contact us</button>
                 </ul>
             </div>
         </div>
