--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" src="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -18,14 +18,17 @@
     </header>
     <section>
         <div class="summary">
-            <h1>I specialise in web development</h1>
-            <p>Need a website? I have you covered: I offer hand-coded websites. Don't worry about hosting it either,
-                I'll do it for a minimal cost.
+            <q>Affordable yet functional</q>
+            <h1>We specialise in web development</h1>
+            <p>
+                Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
+                we'll do it for you if you need it.
             </p>
         </div>
         <div class="introduction"> 
             <h2>Introduction</h2>
-            <p>No WordPress or page builders over here! Those kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
+            <p>
+                No WordPress or page builders over here! Those kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
                 Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site without it feeling flimsy or laggy. 
             </p>
             <h3>Completely responsive</h3>
@@ -37,8 +40,9 @@
         </div>
         <div class="payments">
             <h2>Payment plans</h2>
-            <p>A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then I get to work.
-            You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
+            <p>
+                A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then I get to work.
+                You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
             </p>
         </div>
         <div class="portfolio">
@@ -70,7 +74,7 @@
                 </ul>
             </div>
             <div class="service">
-                <h3>Hosting + </h3>
+                <h3>Hosting + maintenance</h3>
                 <h4>£40 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
@@ -87,6 +91,8 @@
         <div class="logo"></div>
         <div class="icons">
         </div>
+        <p><strong>Email: a@b</strong></p>
+        <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="pages/about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
