--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" src="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -19,16 +19,18 @@
     <section>
         <h1>About</h1>
         <h2>Who we are</h2>
-        <p>Simple! We are a small web development company that makes websites. A simple browse through the web 
+        <p>
+            We are a small web development company that makes static websites. A simple browse through the web 
             shows the importanceof having a solid website for a company. But sadly, there seems to be an
             increasing trend of small businesses that lack a website or a website made poorly with quick templates 
             online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
             customers.</br>
             That's why we offer affordable yet functional websites, both for business owners and individuals. Even
-            if you don't want a website and are looking for advice in this industry or anything really, just give
+            if you don't want a website and are looking for a chat or anything really, just give
             us a shout <a href="contact.html">here</a>.
         </p>
-        <h2>Services</h2>
+        <h3><q>Affordable yet functional</q>, that's our motto.</h3>
+        <h2>What we offer</h2>
         <div class="services_container">
             <div class="service">
                 <h3>Premium</h3>
@@ -50,7 +52,7 @@
                 </ul>
             </div>
             <div class="service">
-                <h3>Hosting + </h3>
+                <h3>Hosting + maintenance</h3>
                 <h4>£40 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
@@ -73,6 +75,8 @@
         <div class="logo"></div>
         <div class="icons">
         </div>
+        <p><strong>Email: a@b</strong></p>
+        <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
