--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
+    <link rel="stylesheet" src="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -15,10 +16,21 @@
             <li><a href="contact.html">Contact us</a></li>
         </ul>
     </header>
+    <section>
+        <h1>Contact us</h1>
+        <div class="icons">
+
+        </div>
+        <h2>Want to chat?</h2>
+        <p><strong>Email: a@b</strong></p>
+        <p>Valley Digital</p>
+    </section>
     <footer class="footer">
         <div class="logo"></div>
         <div class="icons">
         </div>
+        <p><strong>Email: a@b</strong></p>
+        <p>Valley Digital</p>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
