Change stylesheet urls

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" src="public/css/default.css">
+    <link rel="stylesheet" href="public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -22,7 +22,7 @@
             <h1>We specialise in web development</h1>
             <p>
                 Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
-                we'll do it for you if you need it.
+                we'll do it for.
             </p>
         </div>
         <div class="introduction"> 
