--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" src="public/css/default.css">
+    <link rel="stylesheet" href="../public/css/default.css">
 </head>
 <body>
     <header class="header">
@@ -40,6 +40,7 @@
             <li>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
             <li>If you want us to host and maintain it, you can pay £40 per month</li>
         </ul>
+        <p>When using images, logos, etc, make sure it is legal for them to be used!</p>
         <h1>Services</h1>
         <div class="services_container">
             <div class="service">
