--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
-    <link rel="stylesheet" src="public/css/default.css">
+    <link rel="stylesheet" href="../public/css/default.css">
 </head>
 <body>
     <header class="header">
