Style home page

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="../public/css/default.css">
+    <link rel="stylesheet" href="../public/css/about.css">
 </head>
 <body>
     <header class="header">
@@ -27,9 +28,9 @@
             customers.</br>
             That's why we offer affordable yet functional websites, both for business owners and individuals. Even
             if you don't want a website and are looking for a chat or anything really, just give
-            us a shout <a href="contact.html">here</a>.
+            us a shout <a class="here" href="contact.html">here</a>.
         </p>
-        <h3><q>Affordable yet functional</q>, that's our motto.</h3>
+        <h3>&quot;Affordable yet functional&quot;, that's our motto.</h3>
         <h2>What we offer</h2>
         <div class="services_container">
             <div class="service">
