--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" href="public/css/index.css">
 </head>
 <body>
     <header class="header">
@@ -15,35 +16,40 @@
             <li><a href="pages/services.html">Services</a></li>
             <li><a href="pages/contact.html">Contact us</a></li>
         </ul>
+        <q>Affordable yet functional</q>
     </header>
     <section>
         <div class="summary">
-            <q>Affordable yet functional</q>
             <h1>We specialise in web development</h1>
             <p>
                 Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
-                we'll do it for.
+                we'll do it for a minimal cost.
             </p>
         </div>
         <div class="introduction"> 
-            <h2>Introduction</h2>
             <p>
                 No WordPress or page builders over here! Those kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
                 Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site without it feeling flimsy or laggy. 
             </p>
-            <h3>Completely responsive</h3>
-            <p>This means your website will fit all sorts of screens from mobile phones to full desktop sizes, so no potential viewers are missing out.</p>
-            <h3>Convenient for you</h3>
-            <p>I handle everything: building the website, hosting it and ensuring it is well protected.</p>
-            <h3>Cancel at any time</h3>
-            <p>If you change your mind before, during or after the process, you can do so with no extra fees.</p>
-        </div>
-        <div class="payments">
-            <h2>Payment plans</h2>
-            <p>
-                A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then I get to work.
-                You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
-            </p>
+            <div class="grid">
+                <div class="grid-item">
+                    <h3>Completely responsive</h3>
+                    <p>Your website will fit all sorts of screens from mobile phones to full desktop sizes, so no potential viewers are missing out because of
+                        the device they use.
+                    </p>
+                </div>
+                <div class="grid-item">
+                    <h3>Convenient for you</h3>
+                    <p>We handle everything: building the website, hosting it, updating it and ensuring it is well protected. You can sit back and relax.</p>
+                </div>
+                <div class="grid-item">
+                    <h3>Cancel at any time</h3>
+                    <p>
+                        If you change your mind before, during or after the process, you can do so with no extra fees. Cancelling before permanent deployment
+                        makes you eligible for a refund.
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="portfolio">
             <h2>Portfolio</h2>
@@ -53,15 +59,23 @@
                 <div class="design3">3</div>
             </div>
         </div>
-        <div class="services_container">
-            <div class="service">
+        <div class="payments">
+            <h2>Payment plans</h2>
+            <p>
+                A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then we get to work.
+                You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
+            </p>
+        </div>
+        <div class="services-container">
+            <h2>Services</h2>
+            <div class="service" id="service1">
                 <h3>Premium</h3>
-                <h4>Minimum £10,000. Can be negotiated</h4>
+                <h4>Minimum £10,000.</h4>
                 Coming soon!
                 <button>Learn more</button>
                 <button>Contact us</button>
             </div>
-            <div class="service">
+            <div class="service" id="service2">
                 <h3>Standard</h3>
                 <h4>Pay a deposit of £300 first</h4>
                 <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
@@ -73,9 +87,9 @@
                     <button>Contact us</button>
                 </ul>
             </div>
-            <div class="service">
+            <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
-                <h4>£40 per month</h4>
+                <h4>£30 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
                     <li>Done for a lifetime unless you cancel</li>
@@ -91,14 +105,18 @@
         <div class="logo"></div>
         <div class="icons">
         </div>
-        <p><strong>Email: a@b</strong></p>
-        <p>Valley Digital</p>
-        <ul class="menu">
-            <li><a href="pages/about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="pages/services.html">Services</a></li>
-            <li><a href="pages/contact.html">Contact us</a></li>
-        </ul>
+        <div class="info">
+            <div class="contact">
+                <p><strong>Email: a@b</strong></p>
+                <p>Valley Digital</p>
+            </div>
+            <ul class="links">
+                <li><a href="pages/about.html">About</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="pages/services.html">Services</a></li>
+                <li><a href="pages/contact.html">Contact us</a></li>
+            </ul>
+        </div>
         <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved.</div>
     </footer>
 </body>
