Create media styling file, style about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="../public/css/default.css">
+    <link rel="stylesheet" href="../public/css/media.css">
     <link rel="stylesheet" href="../public/css/about.css">
 </head>
 <body>
@@ -19,28 +20,36 @@
     </header>
     <section>
         <h1>About</h1>
-        <h2>Who we are</h2>
-        <p>
-            We are a small web development company that makes static websites. A simple browse through the web 
-            shows the importanceof having a solid website for a company. But sadly, there seems to be an
-            increasing trend of small businesses that lack a website or a website made poorly with quick templates 
-            online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
-            customers.</br>
-            That's why we offer affordable yet functional websites, both for business owners and individuals. Even
-            if you don't want a website and are looking for a chat or anything really, just give
-            us a shout <a class="here" href="contact.html">here</a>.
-        </p>
-        <h3>&quot;Affordable yet functional&quot;, that's our motto.</h3>
-        <h2>What we offer</h2>
-        <div class="services_container">
-            <div class="service">
+        <div class="about">
+            <h2>Who we are</h2>
+            <p>
+                We are a small web development company that makes static websites. A simple browse through the web
+                shows the importanceof having a solid website for a company. But sadly, there seems to be an
+                increasing trend of small businesses that lack a website or a website made poorly with quick templates
+                online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
+                customers.</br>
+                That's why we offer affordable yet functional websites, both for business owners and individuals. Even
+                if you don't want a website and are looking for a chat or anything really, just give
+                us a shout <a class="here" href="contact.html">here</a>.
+            </p>
+            <h3>&quot;Affordable yet functional&quot;, that's our motto.</h3>
+        </div>
+        <div class="work-container">
+            <h2>Portfolio</h2>
+            <div class="design1">1</div>
+            <div class="design2">2</div>
+            <div class="design3">3</div>
+        </div>
+        <div class="services-container">
+            <h2>What we offer</h2>
+            <div class="service" id="service1">
                 <h3>Premium</h3>
-                <h4>Minimum £10,000. Can be negotiated</h4>
+                <h4>Minimum £10,000.</h4>
                 Coming soon!
                 <button>Learn more</button>
                 <button>Contact us</button>
             </div>
-            <div class="service">
+            <div class="service" id="service2">
                 <h3>Standard</h3>
                 <h4>Pay a deposit of £300 first</h4>
                 <h4>Once finished, £1200 up front or £120 per month (for 10 months)</h4>
@@ -52,7 +61,7 @@
                     <button>Contact us</button>
                 </ul>
             </div>
-            <div class="service">
+            <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
                 <h4>£40 per month</h4>
                 <ul>
@@ -64,12 +73,6 @@
                     <button>Contact us</button>
                 </ul>
             </div>
-        </div>
-        <h2>Portfolio</h2>
-        <div class="work_container">
-            <div class="design1">1</div>
-            <div class="design2">2</div>
-            <div class="design3">3</div>
         </div>
     </section>
     <footer class="footer">
