--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" href="public/css/media.css">
     <link rel="stylesheet" href="public/css/index.css">
 </head>
 <body>
