Style services page, change headers

--- a/pages/services.html
+++ b/pages/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
     <link rel="stylesheet" href="../public/css/default.css">
+    <link rel="stylesheet" href="../public/css/services.css">
 </head>
 <body>
     <header class="header">
@@ -15,34 +16,43 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
+        <h1>Services</h1>
     </header>
     <section>
-        <h2>Lifetime hosting and maintenance</h2>
-        <p>
-            When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
-            Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £40 per month, drop
-            an email and we'll be right on it.
-        </p>
-        <h2>Unlimited revisions</h2>
-        <p>
-            For a standard website, you can ask us to revise and change the website any number of times before permanent deployment.
-            If anything doesn't feel quite right about your website, tell us. Constructive criticism is appreciated. If you decide to
-            cancel before permanent deployment, you will be refunded your money.
-        </p>
-        <h2>The process</h2>
-        <p>Here is how working with us will go:</p>
-        <ul>
-            <li>You come and contact us with a new website idea.</li>
-            <li>Make sure to send us examples, images you'd like to include, logos or anything to streamline the process.</li>
-            <li>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
-            <li>Once this is done, we confirm the order and get working.</li>
-            <li>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
-            <li>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
-            <li>If you want us to host and maintain it, you can pay £40 per month</li>
-        </ul>
-        <p>When using images, logos, etc, make sure it is legal for them to be used!</p>
-        <h1>Services</h1>
-        <div class="services_container">
+        <div class="points">
+            <div class="point">
+                <h2>Lifetime hosting and maintenance</h2>
+                <p>
+                    When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
+                    Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £40 per month, drop
+                    an email and we'll be right on it.
+                </p>
+            </div>
+            <div class="point">
+                <h2>Unlimited revisions</h2>
+                <p>
+                    For a standard website, you can ask us to revise and change the website any number of times before permanent deployment.
+                    If anything doesn't feel quite right about your website, tell us. Constructive criticism is appreciated. If you decide to
+                    cancel before permanent deployment, you will be refunded your money.
+                </p>
+            </div>
+        </div>
+        <div class="process">
+            <h2>The process</h2>
+            <p>Here is how working with us will go:</p>
+            <ul>
+                <li>You come and contact us with a new website idea.</li>
+                <li>Make sure to send us examples, images you'd like to include, logos or anything to streamline the process.</li>
+                <li>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
+                <li>Once this is done, we confirm the order and get working.</li>
+                <li>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
+                <li>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
+                <li>If you want us to host and maintain it, you can pay £40 per month</li>
+            </ul>
+            <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
+        </div>
+        <div class="services-container">
+            <h1>Services</h1>
             <div class="service">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000. Can be negotiated</h4>
