--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="index.html"><img src="public/images/logo.png" alt="Our logo"></a>
+        </div>
         <ul class="menu">
             <li><a href="pages/about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
@@ -103,7 +105,9 @@
         </div>
     </section>
     <footer class="footer">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="../index.html"><img src="public/images/logo.png" alt="Our logo"></a>
+        </div>
         <div class="icons">
         </div>
         <div class="info">
