--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="../index.html">Home</a></div>
+        <div class="logo">
+            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+        </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
@@ -76,7 +78,9 @@
         </div>
     </section>
     <footer class="footer">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+        </div>
         <div class="icons">
         </div>
         <p><strong>Email: a@b</strong></p>
