--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="../index.html">Home</a></div>
+        <div class="logo"
+        ><a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+    </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
+        <h1>Contact us</h1>
     </header>
     <section>
-        <h1>Contact us</h1>
         <div class="icons">
 
         </div>
@@ -26,7 +28,9 @@
         <p>Valley Digital</p>
     </section>
     <footer class="footer">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+        </div>
         <div class="icons">
         </div>
         <p><strong>Email: a@b</strong></p>
