--- a/pages/services.html
+++ b/pages/services.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo"><a href="../index.html">Home</a></div>
+        <div class="logo">
+            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+        </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
@@ -72,7 +74,9 @@
             </div>
     </section>
     <footer class="footer">
-        <div class="logo"></div>
+        <div class="logo">
+            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+        </div>
         <div class="icons">
         </div>
         <p><strong>Email: a@b</strong></p>
