--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
                 <h4>£40 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
-                    <li>Done for a lifetime unless you cancel</li>
+                    <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
                     <li>Unlimited edits</li>
                     <button>Learn more</button>
