--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
     <link rel="stylesheet" href="../public/css/default.css">
+    <link rel="stylesheet" href="../public/css/contact.css">
 </head>
 <body>
     <header class="header">
         <div class="logo"
         ><a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
-    </div>
+        </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
@@ -21,11 +22,13 @@
     </header>
     <section>
         <div class="icons">
-
+            Visit us:
         </div>
-        <h2>Want to chat?</h2>
-        <p><strong>Email: a@b</strong></p>
-        <p>Valley Digital</p>
+        <div class="email">
+            <h2>Want to chat?</h2>
+            <p><strong>Email: </strong></p>
+            <p>Valley Digital</p>
+        </div>
     </section>
     <footer class="footer">
         <div class="logo">
