--- a/pages/services.html
+++ b/pages/services.html
@@ -72,6 +72,18 @@
                     <button>Contact us</button>
                 </ul>
             </div>
+            <div class="service" id="service3">
+                <h3>Hosting + maintenance</h3>
+                <h4>£40 per month</h4>
+                <ul>
+                    <li>Included in both packages if you would like</li>
+                    <li>Done for a lifetime</li>
+                    <li>Lifetime updates</li>
+                    <li>Unlimited edits</li>
+                    <button>Learn more</button>
+                    <button>Contact us</button>
+                </ul>
+            </div>
     </section>
     <footer class="footer">
         <div class="logo">
