--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h4>£30 per month</h4>
                 <ul>
                     <li>Included in both packages if you would like</li>
-                    <li>Done for a lifetime unless you cancel</li>
+                    <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
                     <li>Unlimited edits</li>
                     <button>Learn more</button>
