Add detail to home page, header and footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <title>Contact us</title>
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
@@ -20,10 +21,22 @@
         </ul>
         <h1>Contact us</h1>
     </header>
-    <section>
-        <div class="icons">
-            Visit us:
+    <section><div class="icons">
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </span>
+            </a>
+            <span>
+
+            </span>
         </div>
+        Visit us:
         <div class="email">
             <h2>Want to chat?</h2>
             <p><strong>Email: </strong></p>
@@ -34,7 +47,21 @@
         <div class="logo">
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
-        <div class="icons">
+        <        <div class="icons">
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </span>
+            </a>
+            <span>
+
+            </span>
+        </div>>
         </div>
         <p><strong>Email: a@b</strong></p>
         <p>Valley Digital</p>
