--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="public/css/default.css">
     <link rel="stylesheet" href="public/css/media.css">
     <link rel="stylesheet" href="public/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
@@ -19,7 +20,7 @@
             <li><a href="pages/services.html">Services</a></li>
             <li><a href="pages/contact.html">Contact us</a></li>
         </ul>
-        <q>Affordable yet functional</q>
+        <q>Above and beyond</q>
     </header>
     <section>
         <div class="summary">
@@ -31,8 +32,8 @@
         </div>
         <div class="introduction"> 
             <p>
-                No WordPress or page builders over here! Those kinds of sites are easy to break, leads to a high build up in costs for hosting and premium features, and more.
-                Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site without it feeling flimsy or laggy. 
+                No WordPress or page builders over here. Those kinds of sites are easy to break, lead to a high build up in costs for hosting and premium features, and more.
+                Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site. 
             </p>
             <div class="grid">
                 <div class="grid-item">
@@ -55,15 +56,19 @@
             </div>
         </div>
         <div class="portfolio">
-            <h2>Portfolio</h2>
-            <div class="work_container">
-                <div class="design1">1</div>
-                <div class="design2">2</div>
-                <div class="design3">3</div>
+            <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
+            <div class="work-container">
+                <div class="design">
+                    <h3>(standard example)</h3>
+                </div>
+                <div class="design">
+                    <h3>Blog Application (premium example)</h3>
+                    Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                </div>
             </div>
         </div>
         <div class="payments">
-            <h2>Payment plans</h2>
+            <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
             <p>
                 A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then we get to work.
                 You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
@@ -74,7 +79,7 @@
             <div class="service" id="service1">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000.</h4>
-                Coming soon!
+                Coming soon! </br></br>
                 <button>Learn more</button>
                 <button>Contact us</button>
             </div>
@@ -85,7 +90,7 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li>
+                    <li>Lifetime updates</li></br>
                     <button>Learn more</button>
                     <button>Contact us</button>
                 </ul>
@@ -97,7 +102,7 @@
                     <li>Included in both packages if you would like</li>
                     <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
-                    <li>Unlimited edits</li>
+                    <li>Unlimited edits</li></br>
                     <button>Learn more</button>
                     <button>Contact us</button>
                 </ul>
@@ -109,6 +114,19 @@
             <a href="../index.html"><img src="public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
+            <span class="icon">
+                <a href="">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </a>
+            </span>
+            <span class="icon">
+                <a href="">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </a>
+            </span>
+            <span>
+
+            </span>
         </div>
         <div class="info">
             <div class="contact">
