--- a/pages/about.html
+++ b/pages/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/media.css">
     <link rel="stylesheet" href="../public/css/about.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
@@ -23,7 +24,7 @@
     </header>
     <section>
         <div class="about">
-            <h2>Who we are</h2>
+            <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
             <p>
                 We are a small web development company that makes static websites. A simple browse through the web
                 shows the importanceof having a solid website for a company. But sadly, there seems to be an
@@ -34,10 +35,10 @@
                 if you don't want a website and are looking for a chat or anything really, just give
                 us a shout <a class="here" href="contact.html">here</a>.
             </p>
-            <h3>&quot;Affordable yet functional&quot;, that's our motto.</h3>
+            <h3>&quot;Above and beyond&quot;, that's our motto.</h3>
         </div>
         <div class="work-container">
-            <h2>Portfolio</h2>
+            <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
             <div class="design1">1</div>
             <div class="design2">2</div>
             <div class="design3">3</div>
@@ -47,7 +48,7 @@
             <div class="service" id="service1">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000.</h4>
-                Coming soon!
+                Coming soon! </br></br>
                 <button>Learn more</button>
                 <button>Contact us</button>
             </div>
@@ -58,7 +59,7 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li>
+                    <li>Lifetime updates</li></br>
                     <button>Learn more</button>
                     <button>Contact us</button>
                 </ul>
@@ -70,7 +71,7 @@
                     <li>Included in both packages if you would like</li>
                     <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
-                    <li>Unlimited edits</li>
+                    <li>Unlimited edits</li></br>
                     <button>Learn more</button>
                     <button>Contact us</button>
                 </ul>
@@ -82,6 +83,19 @@
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </span>
+            </a>
+            <span>
+
+            </span>
         </div>
         <p><strong>Email: a@b</strong></p>
         <p>Valley Digital</p>
