--- a/pages/services.html
+++ b/pages/services.html
@@ -6,6 +6,7 @@
     <title>Services</title>
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/services.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="header">
@@ -58,7 +59,7 @@
             <div class="service">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000. Can be negotiated</h4>
-                Coming soon!
+                Coming soon!</br></br>
                 <button>Contact us</button>
             </div>
             <div class="service">
@@ -68,7 +69,7 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li>
+                    <li>Lifetime updates</li></br>
                     <button>Contact us</button>
                 </ul>
             </div>
@@ -79,7 +80,7 @@
                     <li>Included in both packages if you would like</li>
                     <li>Done for a lifetime</li>
                     <li>Lifetime updates</li>
-                    <li>Unlimited edits</li>
+                    <li>Unlimited edits</li></br>
                     <button>Learn more</button>
                     <button>Contact us</button>
                 </ul>
@@ -90,6 +91,19 @@
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </span>
+            </a>
+            <a href="">
+                <span class="icon">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </span>
+            </a>
+            <span>
+
+            </span>
         </div>
         <p><strong>Email: a@b</strong></p>
         <p>Valley Digital</p>
