Divide into sections

--- a/index.html
+++ b/index.html
@@ -23,56 +23,60 @@
         <q>Above and beyond</q>
     </header>
     <section>
-        <div class="summary">
-            <h1>We specialise in web development</h1>
-            <p>
-                Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
-                we'll do it for a minimal cost.
-            </p>
-        </div>
-        <div class="introduction"> 
-            <p>
-                No WordPress or page builders over here. Those kinds of sites are easy to break, lead to a high build up in costs for hosting and premium features, and more.
-                Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site. 
-            </p>
-            <div class="grid">
-                <div class="grid-item">
-                    <h3>Completely responsive</h3>
-                    <p>Your website will fit all sorts of screens from mobile phones to full desktop sizes, so no potential viewers are missing out because of
-                        the device they use.
-                    </p>
-                </div>
-                <div class="grid-item">
-                    <h3>Convenient for you</h3>
-                    <p>We handle everything: building the website, hosting it, updating it and ensuring it is well protected. You can sit back and relax.</p>
-                </div>
-                <div class="grid-item">
-                    <h3>Cancel at any time</h3>
-                    <p>
-                        If you change your mind before, during or after the process, you can do so with no extra fees. Cancelling before permanent deployment
-                        makes you eligible for a refund.
-                    </p>
+        <div class="part">
+            <div class="summary">
+                <h1>We specialise in web development</h1>
+                <p>
+                    Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
+                    we'll do it for a minimal cost.
+                </p>
+            </div>
+            <div class="introduction">
+                <p>
+                    No WordPress or page builders over here. Those kinds of sites are easy to break, lead to a high build up in costs for hosting and premium features, and more.
+                    Here, every bit of code is written line by line for best performance so you can bring in more viewers to your site.
+                </p>
+                <div class="grid">
+                    <div class="grid-item">
+                        <h3>Completely responsive</h3>
+                        <p>Your website will fit all sorts of screens from mobile phones to full desktop sizes, so no potential viewers are missing out because of
+                            the device they use.
+                        </p>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Convenient for you</h3>
+                        <p>We handle everything: building the website, hosting it, updating it and ensuring it is well protected. You can sit back and relax.</p>
+                    </div>
+                    <div class="grid-item">
+                        <h3>Cancel at any time</h3>
+                        <p>
+                            If you change your mind before, during or after the process, you can do so with no extra fees. Cancelling before permanent deployment
+                            makes you eligible for a refund.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="portfolio">
-            <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
-            <div class="work-container">
-                <div class="design">
-                    <h3>(standard example)</h3>
-                </div>
-                <div class="design">
-                    <h3>Blog Application (premium example)</h3>
-                    Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+        <div class="part">
+            <div class="portfolio">
+                <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
+                <div class="work-container">
+                    <div class="design">
+                        <h3>(standard example)</h3>
+                    </div>
+                    <div class="design">
+                        <h3>Blog Application (premium example)</h3>
+                        Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="payments">
-            <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
-            <p>
-                A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then we get to work.
-                You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
-            </p>
+            <div class="payments">
+                <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
+                <p>
+                    A standard website of 5 pages costs £1500. Each additional pages costs another £100. At the start, you pay an initial £300 deposit and then we get to work.
+                    You can pay the rest of the £1200 up front or you can choose to pay £120 per month for 10 months.
+                </p>
+            </div>
         </div>
         <div class="services-container">
             <h2>Services</h2>
