--- a/pages/about.html
+++ b/pages/about.html
@@ -23,25 +23,35 @@
         <h1>About</h1>
     </header>
     <section>
-        <div class="about">
-            <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
-            <p>
-                We are a small web development company that makes static websites. A simple browse through the web
-                shows the importanceof having a solid website for a company. But sadly, there seems to be an
-                increasing trend of small businesses that lack a website or a website made poorly with quick templates
-                online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
-                customers.</br>
-                That's why we offer affordable yet functional websites, both for business owners and individuals. Even
-                if you don't want a website and are looking for a chat or anything really, just give
-                us a shout <a class="here" href="contact.html">here</a>.
-            </p>
-            <h3>&quot;Above and beyond&quot;, that's our motto.</h3>
+        <div class="part">
+            <div class="about">
+                <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
+                <p>
+                    We are a small web development company that makes static websites. A simple browse through the web
+                    shows the importanceof having a solid website for a company. But sadly, there seems to be an
+                    increasing trend of small businesses that lack a website or a website made poorly with quick templates
+                    online, no use of maintainable code and insecure security sytems. Now that's bound to lose a few
+                    customers.</br>
+                    That's why we offer affordable yet functional websites, both for business owners and individuals. Even
+                    if you don't want a website and are looking for a chat or anything really, just give
+                    us a shout <a class="here" href="contact.html">here</a>.
+                </p>
+                <h3>&quot;Above and beyond&quot;, that's our motto.</h3>
+            </div>
         </div>
-        <div class="work-container">
-            <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
-            <div class="design1">1</div>
-            <div class="design2">2</div>
-            <div class="design3">3</div>
+        <div class="part">
+            <div class="portfolio">
+                <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
+                <div class="work-container">
+                    <div class="design">
+                        <h3>(standard example)</h3>
+                    </div>
+                    <div class="design">
+                        <h3>Blog Application (premium example)</h3>
+                        Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="services-container">
             <h2>What we offer</h2>
