--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,24 +21,25 @@
         </ul>
         <h1>Contact us</h1>
     </header>
-    <section><div class="icons">
-            <a href="">
-                <span class="icon">
+    <section>
+        <div class="icons">
+            <p>Visit us:</p>
+            <span class="icon">
+                <a href="">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
-                </span>
-            </a>
-            <a href="">
-                <span class="icon">
+                </a>
+            </span>
+            <span class="icon">
+                <a href="">
                     <i class="fa fa-github" aria-hidden="true"></i>
-                </span>
-            </a>
+                </a>
+            </span>
             <span>
 
             </span>
         </div>
-        Visit us:
         <div class="email">
-            <h2>Want to chat?</h2>
+            <h2>Want to chat? <i class="fa fa-envelope-o" aria-hidden="true"></i></h2>
             <p><strong>Email: </strong></p>
             <p>Valley Digital</p>
         </div>
@@ -47,7 +48,7 @@
         <div class="logo">
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
-        <        <div class="icons">
+        <div class="icons">
             <a href="">
                 <span class="icon">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
@@ -61,7 +62,6 @@
             <span>
 
             </span>
-        </div>>
         </div>
         <p><strong>Email: a@b</strong></p>
         <p>Valley Digital</p>
