Modify a few files

--- a/src/index.html
+++ b/src/index.html
@@ -81,13 +81,13 @@ eleventyNavigation:
     <section id="hero">
         <div class="cs-container">
             <div class="cs-flex-group">
-                <span class="cs-topper">mountain hiking society</span>
-                <h1 class="cs-title">Explore the World with Exciting People</h1>
+                <span class="cs-topper">Gardening club</span>
+                <h1 class="cs-title">A whole ecosystem in your garden</h1>
                 <p class="cs-text">
-                    Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
+                    We are tight knit club of passionate gardeners. Anyone is free to join.
                 </p>
                 <a href="/about" class="cs-button-solid">Explore More</a>
-                <a href="/contact" class="cs-button-transparent">
+                <a href="/contact" target="_blank" rel="noopener noreferrer" class="cs-button-transparent">
                     <img
                     class="cs-img"
                     loading="lazy"
@@ -103,8 +103,8 @@ eleventyNavigation:
 
         <!-- Background Image -->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/landing-m.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/landing.jpg">
+            <source media="(max-width: 600px)" srcset="https://images.pexels.com/photos/158028/bellingrath-gardens-alabama-landscape-scenic-158028.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <source media="(min-width: 601px)" srcset="https://images.pexels.com/photos/158028/bellingrath-gardens-alabama-landscape-scenic-158028.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
             <img aria-hidden="true" decoding="async" src="/assets/images/landing.jpg" alt="new home" width="2500" height="1667" loading="eager">
         </picture>
     </section>
