--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
                 <h2>Portfolio <i class="fa fa-desktop" aria-hidden="true"></i></h2>
                 <div class="work-container">
                     <div class="design">
-                        <h3>(standard example)</h3>
+                        <h3>Garden Club (standard example)</h3>
+                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting our blog API">
+                        </br> Visit <a class="here" href="">here</a> to see the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
-                        Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting our blog API">
+                        </br> Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
             </div>
