--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
     <link rel="stylesheet" href="../public/css/default.css">
+    <link rel="stylesheet" href="../public/css/media.css">
     <link rel="stylesheet" href="../public/css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
