Add credit to images

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="work-container">
                     <div class="design">
                         <h3>Garden Club (standard example)</h3>
-                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting our blog API">
+                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting a standard website page">
                         </br> Visit <a class="here" href="">here</a> to see the final product.
                     </div>
                     <div class="design">
@@ -147,7 +147,7 @@
                 <li><a href="pages/contact.html">Contact us</a></li>
             </ul>
         </div>
-        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved.</div>
+        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
     </footer>
 </body>
 </html>
