--- a/pages/about.html
+++ b/pages/about.html
@@ -45,10 +45,13 @@
                 <div class="work-container">
                     <div class="design">
                         <h3>(standard example)</h3>
+                        <img class="computer" src="../public/images/computer.jpg" alt="Computer depicting a standard website page">
+                        </br> Visit <a class="here" href="">here</a> to view the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
-                        Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                        <img class="computer" src="../public/images/computer.jpg" alt="Computer depicting our blog API">
+                        </br>Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
             </div>
