--- a/pages/services.html
+++ b/pages/services.html
@@ -117,7 +117,7 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact us</a></li>
         </ul>
-        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved.</div>
+        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
     </footer>
 </body>
 </html>
